force-app/main/default/objects/RSS_Feed_Config__mdt/RSS_Feed_Config__mdt.object-meta.xml
<CustomObject>
    <label>RSS Feed Config</label>
    <pluralLabel>RSS Feed Configs</pluralLabel>
</CustomObject>