force-app/main/default/objects/RSS_Feed_Config__mdt/fields/From_Name_And_Email__c.field-meta.xml
<CustomField>
    <fullName>From_Name_And_Email__c</fullName>
    <label>From Name And Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>