force-app/main/default/objects/RSS_Feed_Config__mdt/fields/Order_Of_Processing__c.field-meta.xml
<CustomField>
    <fullName>Order_Of_Processing__c</fullName>
    <label>Order Of Processing</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>