force-app/main/default/objects/RSS_Feed_Config__mdt/fields/RSS_Feed_URL__c.field-meta.xml
<CustomField>
    <fullName>RSS_Feed_URL__c</fullName>
    <label>RSS Feed URL</label>
    <length>130768</length>
    <type>LongTextArea</type>
</CustomField>