force-app/main/default/objects/RSS_Feed_Config__mdt/fields/To_Mail__c.field-meta.xml
<CustomField>
    <fullName>To_Mail__c</fullName>
    <label>To Mail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>